--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+server.port = 8081
+server.servlet.context-path = /pos
 
+spring.datasource.url = jdbc:mysql://localhost:3306/pos_db
+spring.datasource.username = root
+spring.datasource.password = Koda@1996
+
+spring.jpa.hibernate.ddl.auto = update
+spring.jpa.properties.hibernate.format_sql = true
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
