--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,10 @@
 			<scope>runtime</scope>
 			<version>${com.mysql.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
