--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.datasource.url = jdbc:mysql://localhost:3306/pos_db
 spring.datasource.username = root
 spring.datasource.password = Koda@1996
 
-spring.jpa.hibernate.ddl.auto = update
-spring.jpa.properties.hibernate.format_sql = true
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+
+# spring.jpa.hibernate.ddl.auto = none
+# spring.jpa.properties.hibernate.format_sql = true
+# spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
